name:          cached-io
version:       1.1.0.0
synopsis:      A simple library to cache a single IO action with timeout
description:
  A simple library that caches an expensive IO action. This produces an IO
  action that, when run, either runs the expensive action and saves its result
  for a period of time, or re-uses the saved value. This amortizes the cost of
  the expensive IO action without a lot of complexity.
  See the test program for an example of how to use it.

license:       Apache-2.0
license-file:  LICENSE
author:        SumAll, Inc.
maintainer:    Bellroy Tech Team <haskell@bellroy.com>
category:      Development
build-type:    Simple
cabal-version: 2.0

source-repository head
  type:     git
  location: git://github.com:bellroy/haskell-cached-io.git

library
  exposed-modules:  Control.Concurrent.CachedIO
  build-depends:
      base          ^>=4.16.4.0
    , exceptions    ^>=0.10.4
    , stm           ^>=2.5
    , time          ^>=1.11.1
    , transformers  ^>=0.5.6

  hs-source-dirs:   src/
  default-language: Haskell2010
  ghc-options:      -fwarn-unused-imports -Wall -fno-warn-unused-do-bind

  if flag(developer)
    ghc-options: -Werror

flag developer
  manual:      True
  default:     False
  description: compile with -Werror to make warnings fatal

executable test-cachedIO
  main-is:          test-cachedIO.hs
  build-depends:
      base       >=4.8 && <5.0
    , cached-io

  hs-source-dirs:   test/
  default-language: Haskell2010
  ghc-options:
    -threaded -rtsopts -fwarn-unused-imports -Wall
    -fno-warn-unused-do-bind

  if flag(developer)
    ghc-options: -Werror
