cabal-version:   2.2
name:            cached-io
version:         1.3.1.0
synopsis:        A simple library to cache IO actions
description:
  Provides functions that convert an IO action into a cached one by storing the
  original result for a period of time, or until some condition is met.

license:         Apache-2.0
license-file:    LICENSE
author:          SumAll, Inc.
maintainer:      Bellroy Tech Team <haskell@bellroy.com>
category:        Development
build-type:      Simple
tested-with:
  GHC ==8.10.7
   || ==9.0.2
   || ==9.2.4
   || ==9.4.5
   || ==9.6.6
   || ==9.8.2
   || ==9.10.1
   || ==9.12.1

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/bellroy/haskell-cached-io.git

common deps
  build-depends: base >=4.13.0.0 && <4.22

library
  import:           deps
  exposed-modules:  Control.Concurrent.CachedIO
  build-depends:
    , exceptions  >=0.10.4 && <0.11
    , stm         >=2.5    && <2.6
    , time        >=1.9.3  && <1.16

  hs-source-dirs:   src/
  default-language: Haskell2010
  ghc-options:      -fwarn-unused-imports -Wall -fno-warn-unused-do-bind

  if flag(developer)
    ghc-options: -Werror

flag developer
  manual:      True
  default:     False
  description: compile with -Werror to make warnings fatal

test-suite test-cachedIO
  import:           deps
  type:             exitcode-stdio-1.0
  main-is:          test-cachedIO.hs
  build-depends:    cached-io
  hs-source-dirs:   test/
  default-language: Haskell2010
  ghc-options:
    -threaded -rtsopts -fwarn-unused-imports -Wall
    -fno-warn-unused-do-bind

  if flag(developer)
    ghc-options: -Werror

  build-depends:
    , tasty        ^>=1.5
    , tasty-hunit  ^>=0.10.0.3
